--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "SqlConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Inventory;Integrated Security=SSPI"
     }
-  },
-  "AllowedHosts": "*"
+
+
 }
