--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "http": {
         "commandName": "Project",
         "dotnetRunMessages": false,
-        "launchBrowser": false,
+        "launchBrowser": true,
         "applicationUrl": "http://localhost:5258",
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
@@ -20,7 +20,7 @@
     },
     "IIS Express": {
         "commandName": "IISExpress",
-        "launchBrowser": false,
+        "launchBrowser": true,
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
         }
