--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "http": {
         "commandName": "Project",
         "dotnetRunMessages": false,
-        "launchBrowser": true,
+        "launchBrowser": false,
         "applicationUrl": "http://localhost:5258",
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
